--- a/package.json
+++ b/package.json
@@ -1,21 +1,34 @@
 {
-  "name": "taskman",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~49.0.8",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.4"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+	"name": "taskman",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@expo/webpack-config": "^19.0.0",
+		"@react-navigation/native": "^6.1.7",
+		"@react-navigation/stack": "^6.3.17",
+		"@reduxjs/toolkit": "^1.9.5",
+		"axios": "^1.5.0",
+		"expo": "~49.0.8",
+		"expo-status-bar": "~1.6.0",
+		"react": "18.2.0",
+		"react-dom": "^18.2.0",
+		"react-native": "0.72.4",
+		"react-native-gesture-handler": "^2.12.1",
+		"react-native-reanimated": "^3.4.2",
+		"react-native-web": "~0.19.6",
+		"react-redux": "^8.1.2",
+		"redux": "^4.2.1",
+		"redux-saga": "^1.2.3",
+		"redux-toolkit": "^1.1.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0"
+	},
+	"private": true
 }
